[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ldpc_rand_codegen"
version = "0.1.0"
description = "A utility script for generating bandwidth reduced random LDPC codes."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0"
]